Add TantivyClient index test